@@ -1,3 +1,8 @@
+2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V00-16-03
+	* split spurious dqm discard message and demote one cat to WARN
+
 2011-02-04  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-16-02
